Visual changes, fixed tag view...

--- a/src/main/resources/templates/article/create.html
+++ b/src/main/resources/templates/article/create.html
@@ -6,7 +6,7 @@
                     <legend>New Post</legend>
 
                     <div class="form-group">
-                        <label class="col-sm-4 control-label" for="article_title">Article Title</label>
+                        <label class="col-sm-4 control-label" for="article_title">Story Title</label>
                         <div class="col-sm-4 ">
                             <input type="text" class="form-control" id="article_title" placeholder="Article Title"
                                    name="title"/>
